# kdalloc-issta-2023

include/klee/ADT/: Bits.h
include/klee/KDAlloc/: allocator.h  asan.h
include/klee/KDAlloc/suballocators/: loh.h  sized_regions.h  slot_allocator.h
include/klee/Support/: Debug.h  KConfig.h  ModuleUtil.h  PrintVersion.h
lib/: CMakeLists.txt
lib/Core/: MemoryManager.cpp
lib/KDAlloc/: CMakeLists.txt  asan.cpp  lib.cpp  lib.h  log.cpp  log.h
lib/Support/: KConfig.cpp
test/Replay/klee-replay/: KTestGen.c  KTestRandGen.c
test/Runtime/POSIX/: Replay.c
tools/kdalloc-asan/: README.md  asan-llvm14.0.6.patch
tools/klee/: main.cpp
tools/klee-replay/: CMakeLists.txt  cli.cpp  cli.h  file-creator.cpp  kconfig.cpp  kconfig.h  klee-replay.cpp  klee-replay.h  klee_init_env.c
unittests/KDAlloc/: randomtest.cpp
